--- a/src/component/header/index.scss
+++ b/src/component/header/index.scss
@@ -1,22 +1,14 @@
-.menu{
-  margin:auto;
-  background: #393E46;
-  color:#fff;
+.header{
   .logo{
-    text-align: center;
-    img{
-      width: 40px;
-    }
+    width: auto;
+    height: 87px;
   }
-  .nav{
-    margin:auto;
-    a{
-      margin-right:20px;
-      color:#fff;
-      font-size: 16px;
-    }
-    a:hover{
-      color:#f1f1f1;
-    }
+  .header-box{
+    width: 1000px;
+    margin: 0 auto;
+  }
+  .header-menu{
+    line-height: 87px;
+    border: none;
   }
 }
